// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`veTable > cell style > render 1`] = `
"<div class="vue-table-root">
  <div style="width: 100%;" class="ve-table ve-table-border-around">
    <div class="ve-table-container ve-table-enable-cell-selection" style="height: 0px;">
      <!---->
      <div class="ve-table-content-wrapper">
        <table class="ve-table-content ve-table-border-x">
          <colgroup>
            <col>
            <col>
            <col>
            <col>
          </colgroup>
          <thead class="ve-table-fixed-header ve-table-header" tableviewportwidth="0">
            <tr class="ve-table-header-tr">
              <th style="text-align: left; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                <!---->Name
                <!---->
                <!---->
                <!---->
              </th>
              <th style="text-align: left; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                <!---->Date
                <!---->
                <!---->
                <!---->
              </th>
              <th style="text-align: left; top: 0px;" class="ve-table-header-th table-header-cell-class" rowspan="1" colspan="1">
                <!---->Hobby
                <!---->
                <!---->
                <!---->
              </th>
              <th style="text-align: left; top: 0px;" class="ve-table-header-th ve-table-last-column" rowspan="1" colspan="1">
                <!---->Address
                <!---->
                <!---->
                <!---->
              </th>
            </tr>
          </thead>
          <tbody class="ve-table-body ve-table-row-hover ve-table-row-highlight">
            <tr style="height: 0px;">
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
            </tr>
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->John
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->1900-05-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Shanghai
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->Dickerson
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->1910-06-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Beijing
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td table-body-cell-class2" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->Larsen
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->2000-07-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding and coding repeat
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Chongqing
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->Geneva
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->2010-08-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding and coding repeat
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Xiamen
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->Jami
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->2020-09-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding and coding repeat
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Shenzhen
              </td>
            </tr>
            <!---->
          </tbody>
          <tfoot class="ve-table-fixed-footer ve-table-footer">
            <tr class="ve-table-footer-tr" attrs="[object Object]" nativeon="[object Object]" on="[object Object]">
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">平均值</td>
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">213</td>
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">355</td>
              <td class="ve-table-footer-td table-footer-cell-class1" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">189</td>
            </tr>
            <tr class="ve-table-footer-tr" attrs="[object Object]" nativeon="[object Object]" on="[object Object]">
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">汇总值</td>
              <td class="ve-table-footer-td table-footer-cell-class2" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">1780</td>
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">890</td>
              <td class="ve-table-footer-td table-footer-cell-class1" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">2988</td>
            </tr>
          </tfoot>
        </table>
        <div class="ve-table-selection-wrapper">
          <div class="ve-table-selection-fixed-left">
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <div class="ve-table-selection-middle">
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <div class="ve-table-selection-fixed-right">
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div style="top: 0px; left: 0px; height: 1px; z-index: -1; opacity: 0;" class="ve-table-edit-input-container" allrowkeys=",,,,"><textarea class="ve-table-edit-input" title="" tabindex="-1"></textarea></div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`veTable > cell style render 1`] = `
<div class="vue-table-root">
  <div class="ve-table ve-table-border-around" style="width: 100%;">
    <div class="ve-table-container ve-table-enable-cell-selection" style="height: 0px;">
      <div class="ve-table-content-wrapper">
        <table class="ve-table-content ve-table-border-x">
          <colgroup>
            <col>
            <col>
            <col>
            <col>
          </colgroup>
          <thead class="ve-table-fixed-header ve-table-header">
            <tr class="ve-table-header-tr">
              <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: left; top: 0px;">Name</th>
              <th rowspan="1" colspan="1" class="ve-table-header-th" style="text-align: left; top: 0px;">Date</th>
              <th rowspan="1" colspan="1" class="ve-table-header-th table-header-cell-class" style="text-align: left; top: 0px;">Hobby</th>
              <th rowspan="1" colspan="1" class="ve-table-header-th ve-table-last-column" style="text-align: left; top: 0px;">Address</th>
            </tr>
          </thead>
          <tbody class="ve-table-body ve-table-row-hover ve-table-row-highlight">
            <tr style="height: 0px;">
              <td style="padding: 0px; border: 0px; height: 0px;"></td>
              <td style="padding: 0px; border: 0px; height: 0px;"></td>
              <td style="padding: 0px; border: 0px; height: 0px;"></td>
              <td style="padding: 0px; border: 0px; height: 0px;"></td>
            </tr>
            <tr class="ve-table-body-tr">
              <td rowspan="1" colspan="1" col-key="a" class="ve-table-body-td" style="text-align: left;">John</td>
              <td rowspan="1" colspan="1" col-key="b" class="ve-table-body-td" style="text-align: left;">1900-05-20</td>
              <td rowspan="1" colspan="1" col-key="c" class="ve-table-body-td table-body-cell-class1" style="text-align: left;">coding</td>
              <td rowspan="1" colspan="1" col-key="d" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Shanghai</td>
            </tr>
            <tr class="ve-table-body-tr">
              <td rowspan="1" colspan="1" col-key="a" class="ve-table-body-td" style="text-align: left;">Dickerson</td>
              <td rowspan="1" colspan="1" col-key="b" class="ve-table-body-td" style="text-align: left;">1910-06-20</td>
              <td rowspan="1" colspan="1" col-key="c" class="ve-table-body-td table-body-cell-class1" style="text-align: left;">coding</td>
              <td rowspan="1" colspan="1" col-key="d" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Beijing</td>
            </tr>
            <tr class="ve-table-body-tr">
              <td rowspan="1" colspan="1" col-key="a" class="ve-table-body-td table-body-cell-class2" style="text-align: left;">Larsen</td>
              <td rowspan="1" colspan="1" col-key="b" class="ve-table-body-td" style="text-align: left;">2000-07-20</td>
              <td rowspan="1" colspan="1" col-key="c" class="ve-table-body-td table-body-cell-class1" style="text-align: left;">coding and coding repeat</td>
              <td rowspan="1" colspan="1" col-key="d" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Chongqing</td>
            </tr>
            <tr class="ve-table-body-tr">
              <td rowspan="1" colspan="1" col-key="a" class="ve-table-body-td" style="text-align: left;">Geneva</td>
              <td rowspan="1" colspan="1" col-key="b" class="ve-table-body-td" style="text-align: left;">2010-08-20</td>
              <td rowspan="1" colspan="1" col-key="c" class="ve-table-body-td table-body-cell-class1" style="text-align: left;">coding and coding repeat</td>
              <td rowspan="1" colspan="1" col-key="d" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Xiamen</td>
            </tr>
            <tr class="ve-table-body-tr">
              <td rowspan="1" colspan="1" col-key="a" class="ve-table-body-td" style="text-align: left;">Jami</td>
              <td rowspan="1" colspan="1" col-key="b" class="ve-table-body-td" style="text-align: left;">2020-09-20</td>
              <td rowspan="1" colspan="1" col-key="c" class="ve-table-body-td table-body-cell-class1" style="text-align: left;">coding and coding repeat</td>
              <td rowspan="1" colspan="1" col-key="d" class="ve-table-body-td" style="text-align: left;">No.1 Century Avenue, Shenzhen</td>
            </tr>
          </tbody>
          <tfoot class="ve-table-fixed-footer ve-table-footer">
            <tr row-key="0" class="ve-table-footer-tr">
              <td rowspan="1" colspan="1" class="ve-table-footer-td" style="text-align: left; bottom: 0px;">平均值</td>
              <td rowspan="1" colspan="1" class="ve-table-footer-td" style="text-align: left; bottom: 0px;">213</td>
              <td rowspan="1" colspan="1" class="ve-table-footer-td" style="text-align: left; bottom: 0px;">355</td>
              <td rowspan="1" colspan="1" class="ve-table-footer-td table-footer-cell-class1" style="text-align: left; bottom: 0px;">189</td>
            </tr>
            <tr row-key="1" class="ve-table-footer-tr">
              <td rowspan="1" colspan="1" class="ve-table-footer-td" style="text-align: left; bottom: 0px;">汇总值</td>
              <td rowspan="1" colspan="1" class="ve-table-footer-td table-footer-cell-class2" style="text-align: left; bottom: 0px;">1780</td>
              <td rowspan="1" colspan="1" class="ve-table-footer-td" style="text-align: left; bottom: 0px;">890</td>
              <td rowspan="1" colspan="1" class="ve-table-footer-td table-footer-cell-class1" style="text-align: left; bottom: 0px;">2988</td>
            </tr>
          </tfoot>
        </table>
        <div class="ve-table-selection-wrapper">
          <div class="ve-table-selection-fixed-left"></div>
          <div class="ve-table-selection-middle"></div>
          <div class="ve-table-selection-fixed-right"></div>
        </div>
      </div>
    </div>
    <div class="ve-table-edit-input-container" style="top: 0px; left: 0px; height: 1px; z-index: -1; opacity: 0;"><textarea tabindex="-1" class="ve-table-edit-input"></textarea></div>
  </div>
</div>
`;

exports[`veTable cell style > render 1`] = `
<div class="vue-table-root">
  <div style="width: 100%;" class="ve-table ve-table-border-around">
    <div class="ve-table-container ve-table-enable-cell-selection" style="height: 0px;">
      <!---->
      <div class="ve-table-content-wrapper">
        <table class="ve-table-content ve-table-border-x">
          <colgroup>
            <col>
            <col>
            <col>
            <col>
          </colgroup>
          <thead class="ve-table-fixed-header ve-table-header" tableviewportwidth="0">
            <tr class="ve-table-header-tr">
              <th style="text-align: left; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                <!---->Name
                <!---->
                <!---->
                <!---->
              </th>
              <th style="text-align: left; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                <!---->Date
                <!---->
                <!---->
                <!---->
              </th>
              <th style="text-align: left; top: 0px;" class="ve-table-header-th table-header-cell-class" rowspan="1" colspan="1">
                <!---->Hobby
                <!---->
                <!---->
                <!---->
              </th>
              <th style="text-align: left; top: 0px;" class="ve-table-header-th ve-table-last-column" rowspan="1" colspan="1">
                <!---->Address
                <!---->
                <!---->
                <!---->
              </th>
            </tr>
          </thead>
          <tbody class="ve-table-body ve-table-row-hover ve-table-row-highlight">
            <tr style="height: 0px;">
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
            </tr>
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->John
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->1900-05-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Shanghai
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->Dickerson
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->1910-06-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Beijing
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td table-body-cell-class2" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->Larsen
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->2000-07-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding and coding repeat
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Chongqing
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->Geneva
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->2010-08-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding and coding repeat
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Xiamen
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr">
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->Jami
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->2020-09-20
              </td>
              <td class="ve-table-body-td table-body-cell-class1" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding and coding repeat
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Shenzhen
              </td>
            </tr>
            <!---->
          </tbody>
          <tfoot class="ve-table-fixed-footer ve-table-footer">
            <tr class="ve-table-footer-tr" attrs="[object Object]" nativeon="[object Object]" on="[object Object]">
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">平均值</td>
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">213</td>
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">355</td>
              <td class="ve-table-footer-td table-footer-cell-class1" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">189</td>
            </tr>
            <tr class="ve-table-footer-tr" attrs="[object Object]" nativeon="[object Object]" on="[object Object]">
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">汇总值</td>
              <td class="ve-table-footer-td table-footer-cell-class2" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">1780</td>
              <td class="ve-table-footer-td" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">890</td>
              <td class="ve-table-footer-td table-footer-cell-class1" style="text-align: left; bottom: 0px;" attrs="[object Object]" on="[object Object]">2988</td>
            </tr>
          </tfoot>
        </table>
        <div class="ve-table-selection-wrapper">
          <div class="ve-table-selection-fixed-left">
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <div class="ve-table-selection-middle">
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <div class="ve-table-selection-fixed-right">
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div style="top: 0px; left: 0px; height: 1px; z-index: -1; opacity: 0;" class="ve-table-edit-input-container" allrowkeys=",,,,"><textarea class="ve-table-edit-input" title="" tabindex="-1"></textarea></div>
    <!---->
    <!---->
  </div>
</div>
`;
